# base-devnotes-template

./: .gitignore  .gitmodules  AGENTS.md  Taskfile.yml  compose.yaml  index.json  package-lock.json  package.json  pylock.toml  pyproject.toml  requirements.txt  start.py
.DRIVESET/: .gitignore
.craft/: _rdddat.md
.craft/DRIVESET/: index.json
.craft/procedures/: npm-prepare.sh  pylock-produce.sh  pyproject-preset.sh  requirements-produce.sh  version-shifter.sh
.craft/routines/: extend-commentary.ipynb  prepublication.sh
.craft/toolkit/: begin-to-listen-for-changes.js  py-shell-pipe-json.py  rdddat-document-printer.sh  repo-info.sh  submodule-upgrading.sh  wiki-home-print.sh
.husky/: commit-msg  post-push  pre-commit  pre-push  prepare-commit-msg
.obsidian/: .gitignore  app.json  canvas.json  command-palette.json  community-plugins.json  core-plugins.json  daily-notes.json  hotkeys.json  templates.json  webviewer.json  workspace.json  zk-prefixer.json
.obsidian/plugins/OA-file-hider/: data.json
.obsidian/plugins/js-engine/: data.json
.obsidian/plugins/mermaid-tools/: data.json
.obsidian/plugins/obsidian-shellcommands/: data.json
toolscripts/: Taskfile.yml  prepare-agents-md.js  prepublication-routines.sh  version-shifter.sh  wiki-home-print.sh
