[project]
name = "technomantic-craftbook"
version = "0.2.0"
description = "template starter notebook for every technomancer's usage, python stuff is only support tooling collection, to maintain easy handling of needs to been fullfill py side is managed by uv"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cproto>=0.7.2",
    "docker>=7.1.0",
    "fastapi>=0.124.4",
    "gitpython>=3.1.45",
    "marimo>=0.18.4",
    "marko>=2.2.1",
    "matplotlib>=3.10.8",
    "miniwdl>=1.13.1",
    "notebook>=7.5.1",
    "ollama>=0.6.1",
    "openai>=2.13.0",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "poetry>=2.2.1",
    "pydrive>=1.3.1",
    "pygithub>=2.8.1",
    "python-socketio>=5.15.0",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "textual-pyfiglet>=1.1.0",
]
